# blueberry-serde-python

./: .gitignore  README.md  pyproject.toml
examples/: basic.py  device.py
src/blueberry_serde/: __init__.py  codec.py  constants.py  crc.py  deserializer.py  header.py  serializer.py  types.py
tests/: test_golden.py  test_optional_fields.py  test_packet.py  test_primitives.py
