[project]
name = "blueberry-serde"
version = "0.1.0"
description = "Python implementation of the Blueberry binary wire format, compatible with pydantic models"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
examples = [
    "pyserial>=3.5",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blueberry_serde"]

[tool.pytest.ini_options]
testpaths = ["tests"]
